update style about page

--- a/style_about_page.html
+++ b/style_about_page.html
@@ -681,7 +681,7 @@
                 <h2 class="section-title">🐎 EXPLORATION CREDITS</h2>
                 <div class="credits-list">
                     <div class="credit-item">
-                        <div class="credit-role">💵 Grant Fund Foundation</div>
+                        <div class="credit-role">💵 Grant Fund Foundation 👑</div>
                         <div class="credit-name">Kakalan Bapaknya Shaquille</div>
                     </div>
                     <div class="credit-item">
@@ -707,7 +707,7 @@
                 </div>
                 
                 <div class="section-content" style="margin-top: 30px; text-align: center;">
-                    <p>Special Thanks: </strong>Para Hamba Allah yang Mendo'akan Saya.</p>
+                    <p><strong>Special Thanks: </strong>Para Hamba Allah yang Mendo'akan Saya.</p>
                     
                     <p style="margin-top: 20px; font-style: italic;">
                         <strong>"Sesungguhnya Kemampuan Manusia adalah Kehendak Allah." </strong>- Nur, Mahasiswi yang hanya ingin lulus.
